--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,10 @@
 
 <form method="POST">
     <div class="form-group">
-        <input type="text" class="form-control mt-3" id="formGroupExampleInput" name="vollername" placeholder="Vorname Nachname">
-        <input type="text" class="form-control mt-1" id="formGroupExampleInput2" name="gewicht" placeholder="Gewicht">
+        <input type="text" class="form-control mt-3" id="formGroupExampleInput1" name="vorname" placeholder="Vorname">
+        <input type="text" class="form-control mt-1" id="formGroupExampleInput2" name="nachname" placeholder="Nachname">
+        <input type="text" class="form-control mt-1" id="formGroupExampleInput3" name="land" placeholder="Nationalität">
+        <input type="text" class="form-control mt-1" id="formGroupExampleInput4" name="gewicht" placeholder="Gewicht">
         <input type="submit" class="btn btn-primary mt-1" value="Eintragen" name="eintragen">
         <input type="submit" class="btn btn-primary mt-1" value="Gewichte Anzeigen" name="gewichteanzeigen">
     </div>
