Optimierung Gewichtszuteilung, Zuteilung ringerID und Darstellung Gewichterliste

--- a/templates/gewichterliste.html
+++ b/templates/gewichterliste.html
@@ -32,10 +32,10 @@
 <div class="m-5">
     <table class="table table-striped">
         <thead class="thead-dark">
-        <th scope="col" class="vw-2">#</th>
-        <th scope="col">Vorname</th>
-        <th scope="col">Nachname</th>
-        <th scope="col">Nationalität</th>
+        <th style="width: 10%" scope="col">Gewichtsklasse</th>
+        <th style="width: 30%" scope="col">Vorname</th>
+        <th style="width: 30%" scope="col">Nachname</th>
+        <th style="width: 30%" scope="col">Nationalität</th>
         </thead>
         <tbody>
         {% for eintrag in ringerliste %}
