--- a/static/bootstrap.css
+++ b/static/bootstrap.css
@@ -1,6 +1,6 @@
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
- * Copyright 2011-2019 The Bootstrap Authors
+ * Copyright 2f011-2019 The Bootstrap Authors
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
@@ -6610,6 +6610,11 @@ button.bg-dark:focus {
   background-color: transparent !important;
 }
 
+.bg-nicolas {
+border-style: none;
+border-radius: 25px;
+box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);}
+
 .border {
   border: 1px solid #dee2e6 !important;
 }
@@ -6754,6 +6759,7 @@ button.bg-dark:focus {
 
 .d-table {
   display: table !important;
+
 }
 
 .d-table-row {
